--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description"
         content="Directorio de herramientas de alto rendimiento para optimización, QR y texto. Procesamiento local y privacidad total.">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8167884438770174"
+        crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
