feat: actualización de componentes y ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
     <!-- Navbar -->
     <nav class="sticky top-0 z-50 glass border-b border-white/5 px-6 py-4">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <div class="flex items-center gap-2">
+            <a href="https://optimicrotools.com"
+                class="flex items-center gap-2 hover:opacity-80 transition-opacity duration-300">
                 <div
                     class="w-8 h-8 rounded bg-cyan-electric flex items-center justify-center font-bold text-black text-xl">
                     O</div>
                 <span class="font-bold text-xl tracking-tighter">OPTIMICRO<span
                         class="text-cyan-electric">TOOLS</span></span>
-            </div>
+            </a>
 
             <div class="flex items-center gap-4">
                 <div class="flex items-center gap-2 px-3 py-1.5 glass rounded-full border border-white/10 group cursor-pointer"
