feat: agregar tres herramientas nuevas al portafolio (myip, speed, safe)

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Navbar -->
     <nav class="sticky top-0 z-50 glass border-b border-white/5 px-6 py-4">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <a href="https://optimicrotools.com"
+            <a href="https://optimicrotools.com" title="Go to Home"
                 class="flex items-center gap-2 hover:opacity-80 transition-opacity duration-300">
                 <div
                     class="w-8 h-8 rounded bg-cyan-electric flex items-center justify-center font-bold text-black text-xl">
@@ -169,10 +169,9 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">PureText</h3>
-                <p id="desc-puretext" class="text-gray-400 mb-6 leading-relaxed">Clean, format and optimize text for
-                    LLMs. Instantly remove AI artifacts and extra noise.</p>
+                <p id="desc-puretext" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch">Launch Tool</span>
+                    <span id="btn-launch"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -192,10 +191,9 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">QuickQR Pro</h3>
-                <p id="desc-quickqr" class="text-gray-400 mb-6 leading-relaxed">Generate high-precision QR codes
-                    locally. Fast, secure, and ready for professional use.</p>
+                <p id="desc-quickqr" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch2">Launch Tool</span>
+                    <span id="btn-launch2"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -215,10 +213,9 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">PromptArchitect</h3>
-                <p id="desc-prompt" class="text-gray-400 mb-6 leading-relaxed">Engineer better AI prompts with
-                    structured templates and local refinement tools.</p>
+                <p id="desc-prompt" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch3">Launch Tool</span>
+                    <span id="btn-launch3"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -238,10 +235,9 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">SanitizePro</h3>
-                <p id="desc-sanitize" class="text-gray-400 mb-6 leading-relaxed">Clean PII and sensitive data from your
-                    prompts before sending them to LLMs. 100% Local.</p>
+                <p id="desc-sanitize" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch4">Launch Tool</span>
+                    <span id="btn-launch4"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -260,10 +256,9 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">SlimContext</h3>
-                <p id="desc-slim" class="text-gray-400 mb-6 leading-relaxed">Optimize token usage by removing
-                    redundancies and stop words for cheaper, faster LLM queries.</p>
+                <p id="desc-slim" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch5">Launch Tool</span>
+                    <span id="btn-launch5"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -283,10 +278,74 @@
                     </svg>
                 </div>
                 <h3 class="text-2xl font-bold mb-2">FastConvert</h3>
-                <p id="desc-fast" class="text-gray-400 mb-6 leading-relaxed">High-speed media conversion using WASM.
-                    Convert and optimize files directly in your browser.</p>
+                <p id="desc-fast" class="text-gray-400 mb-6 leading-relaxed"></p>
                 <div class="flex items-center text-cyan-electric font-semibold text-sm">
-                    <span id="btn-launch6">Launch Tool</span>
+                    <span id="btn-launch6"></span>
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                    </svg>
+                </div>
+            </a>
+
+            <!-- Digital Trace Auditor -->
+            <a href="https://myip.optimicrotools.com"
+                class="glass rounded-2xl p-8 card-hover transition-all duration-300 group">
+                <div
+                    class="w-12 h-12 rounded-xl bg-cyan-electric/10 flex items-center justify-center mb-6 group-hover:bg-cyan-electric/20 transition-colors">
+                    <svg class="w-6 h-6 text-cyan-electric" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M8.111 16.404a5.5 5.5 0 017.778 0M12 20h.01m-7.08-7.071c3.904-3.905 10.236-3.905 14.141 0M1.345 8.982c5.858-5.857 15.356-5.857 21.213 0">
+                        </path>
+                    </svg>
+                </div>
+                <h3 class="text-2xl font-bold mb-2">Digital Trace Auditor</h3>
+                <p id="desc-myip" class="text-gray-400 mb-6 leading-relaxed"></p>
+                <div class="flex items-center text-cyan-electric font-semibold text-sm">
+                    <span id="btn-launch7"></span>
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                    </svg>
+                </div>
+            </a>
+
+            <!-- SpeedTest Lite -->
+            <a href="https://speed.optimicrotools.com"
+                class="glass rounded-2xl p-8 card-hover transition-all duration-300 group">
+                <div
+                    class="w-12 h-12 rounded-xl bg-cyan-electric/10 flex items-center justify-center mb-6 group-hover:bg-cyan-electric/20 transition-colors">
+                    <svg class="w-6 h-6 text-cyan-electric" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                    </svg>
+                </div>
+                <h3 class="text-2xl font-bold mb-2">SpeedTest Lite</h3>
+                <p id="desc-speed" class="text-gray-400 mb-6 leading-relaxed"></p>
+                <div class="flex items-center text-cyan-electric font-semibold text-sm">
+                    <span id="btn-launch8"></span>
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                    </svg>
+                </div>
+            </a>
+
+            <!-- Link Shield -->
+            <a href="https://safe.optimicrotools.com"
+                class="glass rounded-2xl p-8 card-hover transition-all duration-300 group">
+                <div
+                    class="w-12 h-12 rounded-xl bg-cyan-electric/10 flex items-center justify-center mb-6 group-hover:bg-cyan-electric/20 transition-colors">
+                    <svg class="w-6 h-6 text-cyan-electric" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z">
+                        </path>
+                    </svg>
+                </div>
+                <h3 class="text-2xl font-bold mb-2">Link Shield</h3>
+                <p id="desc-safe" class="text-gray-400 mb-6 leading-relaxed"></p>
+                <div class="flex items-center text-cyan-electric font-semibold text-sm">
+                    <span id="btn-launch9"></span>
                     <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
@@ -355,6 +414,9 @@
                 "desc-sanitize": "Clean PII and sensitive data from your prompts before sending them to LLMs. 100% Local.",
                 "desc-slim": "Optimize token usage by removing redundancies and stop words for cheaper, faster LLM queries.",
                 "desc-fast": "High-speed media conversion using WASM. Convert and optimize files directly in your browser.",
+                "desc-myip": "Audit your digital footprint. Check your IP, location, and ISP privacy in one click.",
+                "desc-speed": "Measure your connection speed instantly. No heavy scripts, just pure performance data.",
+                "desc-safe": "Reveal the destination of suspicious links. Stay safe from phishing and hidden redirects.",
                 launch: "Launch Tool",
                 footer: "Engineered for Performance & Privacy",
                 TermsTitle: "Terms of Service",
@@ -376,6 +438,9 @@
                 "desc-sanitize": "Limpia datos sensibles de tus prompts antes de enviarlos a LLMs. Procesamiento 100% local.",
                 "desc-slim": "Optimiza el uso de tokens eliminando redundancias para consultas de IA más baratas y rápidas.",
                 "desc-fast": "Conversión de archivos a alta velocidad con WASM. Convierte y optimiza directamente en tu navegador.",
+                "desc-myip": "Audita tu rastro digital. Revisa tu IP, ubicación y privacidad de tu ISP en un clic.",
+                "desc-speed": "Mide tu velocidad de conexión al instante. Sin scripts pesados, solo datos de rendimiento puro.",
+                "desc-safe": "Revela el destino de enlaces sospechosos. Mantente a salvo de phishing y redirecciones ocultas.",
                 launch: "Abrir Herramienta",
                 footer: "Diseñado para máximo Rendimiento y Privacidad",
                 TermsTitle: "Términos de Servicio",
@@ -402,6 +467,9 @@
             document.getElementById('desc-sanitize').textContent = t["desc-sanitize"];
             document.getElementById('desc-slim').textContent = t["desc-slim"];
             document.getElementById('desc-fast').textContent = t["desc-fast"];
+            document.getElementById('desc-myip').textContent = t["desc-myip"];
+            document.getElementById('desc-speed').textContent = t["desc-speed"];
+            document.getElementById('desc-safe').textContent = t["desc-safe"];
             document.getElementById('footer-tag').textContent = t.footer;
 
             document.getElementById('btn-launch').textContent = t.launch;
@@ -410,6 +478,9 @@
             document.getElementById('btn-launch4').textContent = t.launch;
             document.getElementById('btn-launch5').textContent = t.launch;
             document.getElementById('btn-launch6').textContent = t.launch;
+            document.getElementById('btn-launch7').textContent = t.launch;
+            document.getElementById('btn-launch8').textContent = t.launch;
+            document.getElementById('btn-launch9').textContent = t.launch;
 
             // Language specific HTML lang attribute
             document.documentElement.lang = currentLang;
