feat: se agrega cuenta X al contacto

--- a/index.html
+++ b/index.html
@@ -550,7 +550,11 @@
                             <span class="text-xs font-bold text-gray-500 uppercase tracking-widest">Scan for Nequi (Colombia)</span>
                         </div>
                         <!-- Contact Info -->
-                        <div class="md:col-span-2 pt-6 border-t border-white/5 flex justify-center">
+                        <div class="md:col-span-2 pt-6 border-t border-white/5 flex flex-col md:flex-row justify-center items-center gap-6">
+                             <a href="https://x.com/optimicrotools" target="_blank" class="text-gray-400 hover:text-cyan-electric transition-colors flex items-center gap-2">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932 6.064-6.932zm-1.294 19.497h2.039L6.486 3.24H4.298l13.309 17.41z"></path></svg>
+                                <span class="text-sm">@optimicrotools</span>
+                             </a>
                              <a href="mailto:jota302@gmail.com" class="text-gray-400 hover:text-cyan-electric transition-colors flex items-center gap-2">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                                 <span class="text-sm">jota302@gmail.com</span>
